// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenizes function declaration 1`] = `
Array [
  Object {
    "loc": Object {
      "column": 0,
      "line": 1,
    },
    "type": "keyword",
    "value": "fun",
  },
  Object {
    "loc": Object {
      "column": 4,
      "line": 1,
    },
    "type": "identifier",
    "value": "add",
  },
  Object {
    "loc": Object {
      "column": 8,
      "line": 1,
    },
    "type": "identifier",
    "value": "a",
  },
  Object {
    "loc": Object {
      "column": 10,
      "line": 1,
    },
    "type": "identifier",
    "value": "b",
  },
  Object {
    "loc": Object {
      "column": 12,
      "line": 1,
    },
    "type": "operator",
    "value": "=",
  },
  Object {
    "loc": Object {
      "column": 14,
      "line": 1,
    },
    "type": "identifier",
    "value": "a",
  },
  Object {
    "loc": Object {
      "column": 16,
      "line": 1,
    },
    "type": "operator",
    "value": "+",
  },
  Object {
    "loc": Object {
      "column": 18,
      "line": 1,
    },
    "type": "identifier",
    "value": "b",
  },
]
`;

exports[`tokenizes function declaration 2`] = `
Array [
  Object {
    "loc": Object {
      "column": 0,
      "line": 1,
    },
    "type": "keyword",
    "value": "fun",
  },
  Object {
    "loc": Object {
      "column": 4,
      "line": 1,
    },
    "type": "identifier",
    "value": "add",
  },
  Object {
    "loc": Object {
      "column": 8,
      "line": 1,
    },
    "type": "identifier",
    "value": "a",
  },
  Object {
    "loc": Object {
      "column": 10,
      "line": 1,
    },
    "type": "identifier",
    "value": "b",
  },
  Object {
    "loc": Object {
      "column": 12,
      "line": 1,
    },
    "type": "operator",
    "value": "=",
  },
  Object {
    "loc": Object {
      "column": 14,
      "line": 1,
    },
    "type": "braces",
    "value": "{",
  },
  Object {
    "loc": Object {
      "column": 2,
      "line": 2,
    },
    "type": "keyword",
    "value": "return",
  },
  Object {
    "loc": Object {
      "column": 9,
      "line": 2,
    },
    "type": "identifier",
    "value": "a",
  },
  Object {
    "loc": Object {
      "column": 11,
      "line": 2,
    },
    "type": "operator",
    "value": "+",
  },
  Object {
    "loc": Object {
      "column": 13,
      "line": 2,
    },
    "type": "identifier",
    "value": "b",
  },
  Object {
    "loc": Object {
      "column": 0,
      "line": 3,
    },
    "type": "braces",
    "value": "}",
  },
]
`;

exports[`tokenizes let declaration 1`] = `
Array [
  Object {
    "loc": Object {
      "column": 0,
      "line": 1,
    },
    "type": "keyword",
    "value": "let",
  },
  Object {
    "loc": Object {
      "column": 4,
      "line": 1,
    },
    "type": "identifier",
    "value": "a",
  },
  Object {
    "loc": Object {
      "column": 6,
      "line": 1,
    },
    "type": "operator",
    "value": "=",
  },
  Object {
    "loc": Object {
      "column": 8,
      "line": 1,
    },
    "type": "number",
    "value": "10",
  },
]
`;

exports[`tokenizes main declaration 1`] = `
Array [
  Object {
    "loc": Object {
      "column": 0,
      "line": 1,
    },
    "type": "keyword",
    "value": "main",
  },
  Object {
    "loc": Object {
      "column": 5,
      "line": 1,
    },
    "type": "identifier",
    "value": "Foo",
  },
  Object {
    "loc": Object {
      "column": 9,
      "line": 1,
    },
    "type": "identifier",
    "value": "Bar",
  },
]
`;

exports[`tokenizes strings 1`] = `
Array [
  Object {
    "loc": Object {
      "column": 0,
      "line": 1,
    },
    "type": "keyword",
    "value": "let",
  },
  Object {
    "loc": Object {
      "column": 4,
      "line": 1,
    },
    "type": "identifier",
    "value": "a",
  },
  Object {
    "loc": Object {
      "column": 6,
      "line": 1,
    },
    "type": "operator",
    "value": "=",
  },
  Object {
    "loc": Object {
      "column": 8,
      "line": 1,
    },
    "type": "string",
    "value": "\\"Hello world",
  },
  Object {
    "loc": Object {
      "column": 0,
      "line": 2,
    },
    "type": "keyword",
    "value": "let",
  },
  Object {
    "loc": Object {
      "column": 4,
      "line": 2,
    },
    "type": "identifier",
    "value": "a",
  },
  Object {
    "loc": Object {
      "column": 6,
      "line": 2,
    },
    "type": "operator",
    "value": "=",
  },
  Object {
    "loc": Object {
      "column": 8,
      "line": 2,
    },
    "type": "string",
    "value": "\\"Numbers in strings +0.30",
  },
  Object {
    "loc": Object {
      "column": 0,
      "line": 3,
    },
    "type": "keyword",
    "value": "let",
  },
  Object {
    "loc": Object {
      "column": 4,
      "line": 3,
    },
    "type": "identifier",
    "value": "a",
  },
  Object {
    "loc": Object {
      "column": 6,
      "line": 3,
    },
    "type": "operator",
    "value": "=",
  },
  Object {
    "loc": Object {
      "column": 8,
      "line": 3,
    },
    "type": "string",
    "value": "\\"Operators in string (= | + - /)",
  },
  Object {
    "loc": Object {
      "column": 0,
      "line": 4,
    },
    "type": "keyword",
    "value": "let",
  },
  Object {
    "loc": Object {
      "column": 4,
      "line": 4,
    },
    "type": "identifier",
    "value": "a",
  },
  Object {
    "loc": Object {
      "column": 6,
      "line": 4,
    },
    "type": "operator",
    "value": "=",
  },
  Object {
    "loc": Object {
      "column": 8,
      "line": 4,
    },
    "type": "string",
    "value": "\\"Keywords such as let in string",
  },
]
`;

exports[`tokenizes type declaration 1`] = `
Array [
  Object {
    "loc": Object {
      "column": 0,
      "line": 1,
    },
    "type": "keyword",
    "value": "type",
  },
  Object {
    "loc": Object {
      "column": 5,
      "line": 1,
    },
    "type": "identifier",
    "value": "Bar",
  },
  Object {
    "loc": Object {
      "column": 9,
      "line": 1,
    },
    "type": "operator",
    "value": "=",
  },
  Object {
    "loc": Object {
      "column": 11,
      "line": 1,
    },
    "type": "identifier",
    "value": "Boolean",
  },
  Object {
    "loc": Object {
      "column": 19,
      "line": 1,
    },
    "type": "operator",
    "value": "|",
  },
  Object {
    "loc": Object {
      "column": 21,
      "line": 1,
    },
    "type": "identifier",
    "value": "String",
  },
  Object {
    "loc": Object {
      "column": 28,
      "line": 1,
    },
    "type": "operator",
    "value": "|",
  },
  Object {
    "loc": Object {
      "column": 30,
      "line": 1,
    },
    "type": "identifier",
    "value": "Number",
  },
  Object {
    "loc": Object {
      "column": 0,
      "line": 2,
    },
    "type": "keyword",
    "value": "type",
  },
  Object {
    "loc": Object {
      "column": 5,
      "line": 2,
    },
    "type": "identifier",
    "value": "Maybe",
  },
  Object {
    "loc": Object {
      "column": 11,
      "line": 2,
    },
    "type": "identifier",
    "value": "Number",
  },
  Object {
    "loc": Object {
      "column": 18,
      "line": 2,
    },
    "type": "operator",
    "value": "=",
  },
  Object {
    "loc": Object {
      "column": 20,
      "line": 2,
    },
    "type": "identifier",
    "value": "Nothing",
  },
  Object {
    "loc": Object {
      "column": 28,
      "line": 2,
    },
    "type": "operator",
    "value": "|",
  },
  Object {
    "loc": Object {
      "column": 30,
      "line": 2,
    },
    "type": "identifier",
    "value": "Number",
  },
  Object {
    "loc": Object {
      "column": 0,
      "line": 3,
    },
    "type": "keyword",
    "value": "type",
  },
  Object {
    "loc": Object {
      "column": 5,
      "line": 3,
    },
    "type": "identifier",
    "value": "Users",
  },
  Object {
    "loc": Object {
      "column": 11,
      "line": 3,
    },
    "type": "operator",
    "value": "=",
  },
  Object {
    "loc": Object {
      "column": 13,
      "line": 3,
    },
    "type": "identifier",
    "value": "List",
  },
  Object {
    "loc": Object {
      "column": 18,
      "line": 3,
    },
    "type": "identifier",
    "value": "User",
  },
]
`;

exports[`tokenizes various types of numbers 1`] = `
Array [
  Object {
    "loc": Object {
      "column": 0,
      "line": 1,
    },
    "type": "keyword",
    "value": "let",
  },
  Object {
    "loc": Object {
      "column": 4,
      "line": 1,
    },
    "type": "identifier",
    "value": "a",
  },
  Object {
    "loc": Object {
      "column": 6,
      "line": 1,
    },
    "type": "operator",
    "value": "=",
  },
  Object {
    "loc": Object {
      "column": 8,
      "line": 1,
    },
    "type": "number",
    "value": "10",
  },
  Object {
    "loc": Object {
      "column": 0,
      "line": 2,
    },
    "type": "keyword",
    "value": "let",
  },
  Object {
    "loc": Object {
      "column": 4,
      "line": 2,
    },
    "type": "identifier",
    "value": "a",
  },
  Object {
    "loc": Object {
      "column": 6,
      "line": 2,
    },
    "type": "operator",
    "value": "=",
  },
  Object {
    "loc": Object {
      "column": 8,
      "line": 2,
    },
    "type": "number",
    "value": "10.30",
  },
  Object {
    "loc": Object {
      "column": 0,
      "line": 3,
    },
    "type": "keyword",
    "value": "let",
  },
  Object {
    "loc": Object {
      "column": 4,
      "line": 3,
    },
    "type": "identifier",
    "value": "a",
  },
  Object {
    "loc": Object {
      "column": 6,
      "line": 3,
    },
    "type": "operator",
    "value": "=",
  },
  Object {
    "loc": Object {
      "column": 8,
      "line": 3,
    },
    "type": "number",
    "value": "+10",
  },
  Object {
    "loc": Object {
      "column": 0,
      "line": 4,
    },
    "type": "keyword",
    "value": "let",
  },
  Object {
    "loc": Object {
      "column": 4,
      "line": 4,
    },
    "type": "identifier",
    "value": "a",
  },
  Object {
    "loc": Object {
      "column": 6,
      "line": 4,
    },
    "type": "operator",
    "value": "=",
  },
  Object {
    "loc": Object {
      "column": 8,
      "line": 4,
    },
    "type": "number",
    "value": "-10",
  },
  Object {
    "loc": Object {
      "column": 0,
      "line": 5,
    },
    "type": "keyword",
    "value": "let",
  },
  Object {
    "loc": Object {
      "column": 4,
      "line": 5,
    },
    "type": "identifier",
    "value": "a",
  },
  Object {
    "loc": Object {
      "column": 6,
      "line": 5,
    },
    "type": "operator",
    "value": "=",
  },
  Object {
    "loc": Object {
      "column": 8,
      "line": 5,
    },
    "type": "number",
    "value": ".30",
  },
  Object {
    "loc": Object {
      "column": 0,
      "line": 6,
    },
    "type": "keyword",
    "value": "let",
  },
  Object {
    "loc": Object {
      "column": 4,
      "line": 6,
    },
    "type": "identifier",
    "value": "a",
  },
  Object {
    "loc": Object {
      "column": 6,
      "line": 6,
    },
    "type": "operator",
    "value": "=",
  },
  Object {
    "loc": Object {
      "column": 8,
      "line": 6,
    },
    "type": "number",
    "value": "+.30",
  },
  Object {
    "loc": Object {
      "column": 0,
      "line": 7,
    },
    "type": "keyword",
    "value": "let",
  },
  Object {
    "loc": Object {
      "column": 4,
      "line": 7,
    },
    "type": "identifier",
    "value": "a",
  },
  Object {
    "loc": Object {
      "column": 6,
      "line": 7,
    },
    "type": "operator",
    "value": "=",
  },
  Object {
    "loc": Object {
      "column": 8,
      "line": 7,
    },
    "type": "number",
    "value": "-.30",
  },
  Object {
    "loc": Object {
      "column": 0,
      "line": 8,
    },
    "type": "keyword",
    "value": "let",
  },
  Object {
    "loc": Object {
      "column": 4,
      "line": 8,
    },
    "type": "identifier",
    "value": "a",
  },
  Object {
    "loc": Object {
      "column": 6,
      "line": 8,
    },
    "type": "operator",
    "value": "=",
  },
  Object {
    "loc": Object {
      "column": 8,
      "line": 8,
    },
    "type": "number",
    "value": "+0.30",
  },
  Object {
    "loc": Object {
      "column": 0,
      "line": 9,
    },
    "type": "keyword",
    "value": "let",
  },
  Object {
    "loc": Object {
      "column": 4,
      "line": 9,
    },
    "type": "identifier",
    "value": "a",
  },
  Object {
    "loc": Object {
      "column": 6,
      "line": 9,
    },
    "type": "operator",
    "value": "=",
  },
  Object {
    "loc": Object {
      "column": 8,
      "line": 9,
    },
    "type": "number",
    "value": "-0.30",
  },
]
`;
